# pytcc

./: .gitignore  CMakeLists.txt  MANIFEST.in  PYTCC_VERSION  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build-libtcc.sh  on-push.yaml
pytcc/: pytcc.c  pytcc.pyx
src/: pytcc.pyx
tests/: test_pytcc.py
